--- a/src/Resources/Themes/Dark.xaml
+++ b/src/Resources/Themes/Dark.xaml
@@ -5,7 +5,7 @@
 
     <SolidColorBrush x:Key="Brush.Window" Color="#FF252525"/>
     <SolidColorBrush x:Key="Brush.TitleBar" Color="#FF1F1F1F"/>
-    <SolidColorBrush x:Key="Brush.NewPageHover" Color="#FF404040"/>
+    <SolidColorBrush x:Key="Brush.TabButtonHover" Color="#FF404040"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FF2B2B2B"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="#FF1B1B1B"/>
     <SolidColorBrush x:Key="Brush.Badge" Color="#FF8F8F8F"/>
