--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -3,12 +3,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
-    <SolidColorBrush x:Key="Brush.Window" Color="#FFF8F8F8"/>
-    <SolidColorBrush x:Key="Brush.TitleBar" Color="White"/>
-    <SolidColorBrush x:Key="Brush.NewPageHover" Color="#1D000000"/>
+    <SolidColorBrush x:Key="Brush.Window" Color="#FFF0F5F9"/>
+    <SolidColorBrush x:Key="Brush.TitleBar" Color="#FFCFDEEA"/>
+    <SolidColorBrush x:Key="Brush.TabButtonHover" Color="#1D000000"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FFF8F8F8"/>
-    <SolidColorBrush x:Key="Brush.Contents" Color="White"/>
-    <SolidColorBrush x:Key="Brush.Badge" Color="#FFAFAFAF"/>
+    <SolidColorBrush x:Key="Brush.Contents" Color="#FFFAFAFA"/>
+    <SolidColorBrush x:Key="Brush.Badge" Color="#FFB0CEE8"/>
     <SolidColorBrush x:Key="Brush.Decorator" Color="#FF6F6F6F"/>
     <SolidColorBrush x:Key="Brush.DecoratorIcon" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Conflict" Color="#FF836C2E"/>
