--- a/src/Views/Widgets/Welcome.xaml
+++ b/src/Views/Widgets/Welcome.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
 
         <!-- Repositories Tool Bar -->
-        <Grid Grid.Row="0" Grid.Column="1" Margin="0,100,0,0">
+        <Grid Grid.Row="0" Grid.Column="1" Margin="2,100,2,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -74,7 +74,7 @@
         </Grid>
         
         <!-- Search Bar -->
-        <Grid Grid.Row="1" Grid.Column="1" Margin="0,8" Height="28" VerticalAlignment="Top">
+        <Grid Grid.Row="1" Grid.Column="1" Margin="2,8" Height="28" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="24"/>
                 <ColumnDefinition Width="*"/>
@@ -120,42 +120,47 @@
                             <Control MouseDoubleClick="OnDoubleClickRepository">
                                 <Control.Template>
                                     <ControlTemplate>
-                                        <Border
-                                            Height="36" Margin="0,2"
-                                            BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" 
-                                            Background="{DynamicResource Brush.Contents}">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="8"/>
-                                                    <ColumnDefinition Width="*"/>
-                                                    <ColumnDefinition Width="32"/>
-                                                    <ColumnDefinition Width="32"/>
-                                                    <ColumnDefinition Width="32"/>
-                                                    <ColumnDefinition Width="32"/>
-                                                    <ColumnDefinition Width="8"/>
-                                                </Grid.ColumnDefinitions>
+                                        <Grid Height="38" Margin="2">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="8"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="32"/>
+                                                <ColumnDefinition Width="32"/>
+                                                <ColumnDefinition Width="32"/>
+                                                <ColumnDefinition Width="32"/>
+                                                <ColumnDefinition Width="8"/>
+                                            </Grid.ColumnDefinitions>
 
-                                                <Border Grid.Column="0" Width="4" HorizontalAlignment="Left" Background="{Binding Bookmark, Converter={StaticResource IntToBookmarkBrush}}"/>
+                                            <Border
+                                                Grid.Column="0" Grid.ColumnSpan="7"
+                                                BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" 
+                                                Background="{DynamicResource Brush.Contents}">
+                                                <Border.Effect>
+                                                    <DropShadowEffect Color="Black" ShadowDepth="2" BlurRadius="0" Opacity=".1"/>
+                                                </Border.Effect>
+                                            </Border>
 
-                                                <StackPanel Grid.Column="1" Margin="4,0" Orientation="Horizontal">
-                                                    <TextBlock Text="{Binding Name}" FontSize="12pt" FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}"/>
-                                                    <TextBlock Text="{Binding Path}" FontSize="10pt" FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}" Margin="8,0" Foreground="{DynamicResource Brush.FG2}"/>
-                                                </StackPanel>
+                                            <Border Grid.Column="0" Width="4" HorizontalAlignment="Left" Background="{Binding Bookmark, Converter={StaticResource IntToBookmarkBrush}}"/>
 
-                                                <Button Grid.Column="2" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.RepoCM.Open}" Click="OnOpenRepository">
-                                                    <Path Width="15" Data="{StaticResource Icon.Folder.Open}"/>
-                                                </Button>
-                                                <Button Grid.Column="3" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.RepoCM.Explore}" Click="OnExploreRepository">
-                                                    <Path Width="14" Data="{StaticResource Icon.DiffWith}"/>
-                                                </Button>
-                                                <Button Grid.Column="4" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.Welcome.OpenTerminal}" Click="OnOpenRepositoryTerminal">
-                                                    <Path Width="14" Data="{StaticResource Icon.Terminal}"/>
-                                                </Button>
-                                                <Button Grid.Column="5" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.Welcome.Delete}" Click="OnRemoveRepository">
-                                                    <Path Width="10" Data="{StaticResource Icon.Close}"/>
-                                                </Button>
-                                            </Grid>
-                                        </Border>
+                                            <StackPanel Grid.Column="1" Margin="4,0" Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Name}" FontSize="12pt" FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}"/>
+                                                <TextBlock Text="{Binding Path}" FontSize="10pt" FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}" Margin="8,0" Foreground="{DynamicResource Brush.FG2}"/>
+                                            </StackPanel>
+
+                                            <Button Grid.Column="2" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.RepoCM.Open}" Click="OnOpenRepository">
+                                                <Path Width="15" Data="{StaticResource Icon.Folder.Open}"/>
+                                            </Button>
+                                            <Button Grid.Column="3" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.RepoCM.Explore}" Click="OnExploreRepository">
+                                                <Path Width="14" Data="{StaticResource Icon.DiffWith}"/>
+                                            </Button>
+                                            <Button Grid.Column="4" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.Welcome.OpenTerminal}" Click="OnOpenRepositoryTerminal">
+                                                <Path Width="14" Data="{StaticResource Icon.Terminal}"/>
+                                            </Button>
+                                            <Button Grid.Column="5" Margin="8,0,0,0" BorderThickness="0" Background="Transparent" ToolTip="{DynamicResource Text.Welcome.Delete}" Click="OnRemoveRepository">
+                                                <Path Width="10" Data="{StaticResource Icon.Close}"/>
+                                            </Button>
+                                        </Grid>
+                                        
                                     </ControlTemplate>
                                 </Control.Template>
                             </Control>
